Made the first product list(Top Product)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-  "cSpell.ignoreWords": ["adios", "adriot", "adroitsoft", "bitchachos", "fontawesome", "fortawesome", "soft"]
+  "cSpell.ignoreWords": [
+    "adios",
+    "adriot",
+    "adroitsoft",
+    "aihontai",
+    "bitchachos",
+    "coop",
+    "dgreat",
+    "fontawesome",
+    "fortawesome",
+    "redmi",
+    "soft",
+    "xiaomi"
+  ]
 }
